# vexy-svgo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  GEMINI.md  HISTORY.md  IMPROVEMENTS_SUMMARY.md  Makefile  PLAN.md  README.md  TODO.md  WORK.md  build-output.txt  build-wasm.sh  build.err.txt  build.sh  clippy.toml  grep.txt  migrate.sh  mkdocs.yml  release.log.txt  release.sh  requirements.txt  rustfmt.toml  svgo.schema.json  tree.txt  tree_output.txt  wasm-pack.toml
.cursor/rules/: data-flow.mdc  optimization-algorithms.mdc  plugin-architecture.mdc  validation-rules.mdc
.giga/: specifications.json
.github/workflows/: benchmarks.yml  ci-optimized.yml  ci-parallel.yml  ci.yml  coverage.yml  dependency-cache.yml  docs.yml  release.yml  rust.yml  test-build-scripts.yml
.specstory/history/: 2025-07-12_18-21Z-this-tool-must-not-touch-`rust-version-1-58-0-`.md
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: optimization.rs  parser.rs  stringifier.rs  svgo_comparison.rs
crates/benchmarks/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: features_cmd.rs  main.rs
crates/cli/src/commands/plugin/: disable.rs  enable.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs
crates/cli/tests/: additional_integration_tests.rs  integration_test.rs  integration_tests.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  collections.rs  error.rs  features.rs  lib.rs  plugin_registry.rs  stringifier.rs  visitor.rs
crates/core/src/optimizer/: mod.rs  parallel.rs
crates/core/src/parser/: attributes.rs  config.rs  elements.rs  entities.rs  error.rs  main.rs  mod.rs  streaming.rs  tests.rs  util.rs  utils.rs
crates/core/src/utils/: attributes.rs  colors.rs  mod.rs  numbers.rs  paths.rs  selectors.rs
crates/core/tests/: ast_test.rs  ast_tests.rs  error_tests.rs  main_api_tests.rs  optimizer_tests.rs  parallel_test.rs  parser_tests.rs  plugin_registry_tests.rs  stringifier_tests.rs  svgo_config_compatibility_tests.rs  svgo_config_format_tests.rs  visitor_tests.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/plugin-sdk/: Cargo.toml  README.md  build_output.txt
crates/plugin-sdk/examples/: plugin_composition.rs
crates/plugin-sdk/src/: enhanced_registry.rs  lib.rs  plugin_test_macros.rs  property_tests.rs  registry.rs  selector.rs  test_framework.rs  test_utils.rs
crates/plugin-sdk/src/plugins/: add_attributes_to_svg_element.rs  add_classes_to_svg_element.rs  apply_transforms.rs  cleanup_attrs.rs  cleanup_enable_background.rs  cleanup_numeric_values.rs  collapse_groups.rs  convert_colors.rs  convert_ellipse_to_circle.rs  convert_one_stop_gradients.rs  convert_shape_to_path.rs  convert_style_to_attrs.rs  convert_transform.rs  inline_styles.rs  merge_paths.rs  merge_styles.rs  minify_styles.rs  mod.rs  move_elems_attrs_to_group.rs  move_group_attrs_to_elems.rs  prefix_ids.rs  remove_attributes_by_selector.rs  remove_attrs.rs  remove_comments.rs  remove_deprecated_attrs.rs  remove_desc.rs  remove_dimensions.rs  remove_doctype.rs  remove_editors_ns_data.rs  remove_elements_by_attr.rs  remove_empty_attrs.rs  remove_empty_containers.rs  remove_empty_text.rs  remove_hidden_elems.rs  remove_metadata.rs  remove_non_inheritable_group_attrs.rs  remove_off_canvas_paths.rs  remove_raster_images.rs  remove_scripts.rs  remove_style_element.rs  (+12 more)
crates/plugin-sdk/src/plugins/cleanup_ids/: collector.rs  mod.rs  renamer.rs
crates/plugin-sdk/src/plugins/convert_path_data/: abs_to_rel.rs  mod.rs  normalize.rs  parser.rs  rel_to_abs.rs  tests.rs
crates/plugin-sdk/src/plugins/remove_unknowns_and_defaults/: default_attrs.rs  mod.rs  tests.rs  unknown_elements.rs
crates/plugin-sdk/tests/: integration_test.rs  property_tests.rs  registry_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  macros.rs  test_framework.rs  test_macros.rs  test_utils.rs
crates/test-utils/tests/: compat.rs
crates/wasm/: Cargo.toml  package.json.template  vexy-svgo.d.ts  vexy_svgo.d.ts  wrapper.js
crates/wasm/.cargo/: config.toml
crates/wasm/src/: enhanced.rs  lib.rs  minimal.rs
docs/: 404.html  DOCUMENTATION_UPDATE_SUMMARY.md  PLUGIN_MIGRATION.md  SVGO_PLUGINS_COMPREHENSIVE_LIST.md  _build.sh  _config.yml  _serve.sh  architecture.md  benchmarks.md  comparison.md  index.html  index.md  package-lock.json  package.json  plugin-development.md  plugin-marketplace.md  plugin-sdk-readme.md  plugins.md  sitemap.xml  tailwind.config.js  usage.md  vexy_svgo_PLUGIN_ANALYSIS_SUMMARY.md  wasm-demo.html
docs/_layouts/: tool.html
docs/_tools/: README.md  index.md  optimizer.md  svgo-optimizer.md
docs/data/: benchmarks.json
docs/demo/: index.md
docs/developer/: benchmarks.md  index.html  index.md  plugin-migration.md  plugin-reference.md
docs/guide/: cli-usage.md  index.md  installation.md
docs/search/: search_index.json
docs/user/: cli-usage.md  configuration.md  demo.md  index.html  index.md  installation.md  plugins.md
docs_src/: index.md
examples/: cli-usage.md  memory-profiling.rs  nodejs-integration.js  rust-integration.rs  wasm-browser.html  wasm-enhanced-demo.html  wasm-usage.md
examples/example-plugin/: Cargo.toml  README.md
examples/example-plugin/benches/: plugin_bench.rs
examples/example-plugin/src/: lib.rs
issues/: 110.txt  120.txt  122.txt  123.txt  124.txt  201.txt  301.txt  302.txt  303.txt  602.txt  603.txt  610.txt  611.txt  620.txt  621.txt
scripts/: README-benchmarks.md  benchmark-comprehensive.sh  benchmark1.sh  build-all-platforms.sh  build-all.sh  build-wasm-optimized.sh  build.sh  ci-cache-warmup.sh  install-docs-deps.sh  marketplace-setup.sh  package-current-platform.sh  package-deliverables.sh  package-release.sh  profile-memory.sh  scripts.md  set-cargo-version.sh  track-bundle-size.sh  verify-build.sh
src/: main.rs
test/: fixture_tests.rs  generated_plugin_tests.rs  integration_test.rs  svgo_compatibility_tests.rs  test_macro.rs
testdata/: svgo_fixture_migration_report.md
vexy-svgo/: Cargo.toml
(+457 files in other folders)
