[workspace]
members = [
    "crates/benchmarks",
    "crates/cli",
    "crates/core",
    "crates/ffi",
    "crates/plugin-sdk",
    "crates/test-utils",
    "crates/wasm",
]
resolver = "2"

[workspace.package]
version = "1.0.31"
authors = ["Adam Twardoch <adam+github@twardoch.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vexyart/vexy-svgo"
homepage = "https://github.com/vexyart/vexy-svgo"
documentation = "https://docs.rs/vexy-svgo"
keywords = ["svg", "svgo", "optimizer", "vector", "graphics"]
categories = ["command-line-utilities", "multimedia::images", "template-engine", "web-programming", "wasm"]
rust-version = "1.58.0"

[workspace.dependencies]
vexy-svgo-core = { path = "./crates/core", version = "1.0.31" }
vexy-svgo-plugin-sdk = { path = "./crates/plugin-sdk", version = "1.0.31" }
vexy-svgo-test-utils = { path = "./crates/test-utils", version = "1.0.31" }
anyhow = "1.0"
assert_cmd = "2.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
env_logger = "0.11"
fs-err = "2.11"
indoc = "2.0"
log = "0.4"
lyon = "1.0"
pretty_assertions = "1.4"
predicates = "3.0"
rayon = "1.10"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
svg_metadata = "0.3"
tempfile = "3.10"
thiserror = "1.0"
toml = "0.8"
walkdir = "2.5"
cssparser = "0.35"
indexmap = "2.2"
lightningcss = "1.0.0-alpha.58"
regex = "1.10"
selectors = "0.30"
precomputed-hash = "0.1"
nalgebra = "0.33"
once_cell = "1.19"
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
usvg = "0.45.1"
quick-xml = "0.31"
parking_lot = "0.12"
colored = "2.1"
indicatif = "0.17"
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"
overflow-checks = false

[workspace.lints.clippy]
# Deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"

# Warn - Correctness
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"

# Warn - Specific lints
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
unsafe_code = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
pub_enum_variant_names = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"

# Allow - Acceptable patterns
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "warn"
