[package]
name = "vexy-svgo-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[[bench]]
name = "optimization"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "stringifier"
harness = false

[[bench]]
name = "svgo_comparison"
harness = false

[dependencies]
vexy-svgo-core = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"