[package]
name = "vexy-svgo-cli"
description = "CLI for vexy-svgo SVG optimizer"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.documentation]
workspace = true

[package.keywords]
workspace = true

[package.categories]
workspace = true

[package.rust-version]
workspace = true

[[bin]]
name = "vexy-svgo"
path = "src/main.rs"

[dependencies]
vexy-svgo-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
env_logger = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
pretty_assertions = { workspace = true }

