[package]
name = "vexy-svgo-core"
version = "1.0.30"
description = "Core library for vexy-svgo SVG optimizer"

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.documentation]
workspace = true

[package.keywords]
workspace = true

[package.categories]
workspace = true

[package.rust-version]
workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
svg_metadata = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
quick-xml = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
parallel = ["rayon"]
lyon = []
experimental = []
memory-profiling = []
data-uri = []

[dependencies.rayon]
workspace = true
optional = true

[dev-dependencies]
tempfile = { workspace = true }

