[package]
name = "vexy-svgo-ffi"
description = "C-compatible FFI bindings for vexy-svgo SVG optimizer"


[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.documentation]
workspace = true

[package.keywords]
workspace = true

[package.categories]
workspace = true

[package.rust-version]
workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
cbindgen = "0.26.0"
libc = "0.2"


[dependencies.vexy-svgo-core]
path = "../core"


[build-dependencies]
cbindgen = "0.26.0"

