[package]
name = "vexy-svgo-plugin-sdk"
description = "Plugin development SDK for vexy-svgo SVG optimizer"


[package.version]
workspace = true


[package.edition]
workspace = true


[package.authors]
workspace = true


[package.license]
workspace = true


[package.repository]
workspace = true


[package.homepage]
workspace = true


[dependencies.vexy-svgo-core]
path = "../core"


[dependencies.thiserror]
workspace = true


[dependencies.anyhow]
workspace = true


[dependencies.serde]
workspace = true
features = [ "derive" ]


[dependencies.serde_json]
workspace = true


[dependencies.regex]
workspace = true


[dependencies.lightningcss]
workspace = true


[dependencies.indexmap]
workspace = true


[dependencies.selectors]
workspace = true


[dependencies.precomputed-hash]
workspace = true


[dependencies.cssparser]
workspace = true


[dependencies.nalgebra]
workspace = true


[dependencies.once_cell]
workspace = true


[dependencies.lyon]
workspace = true


[dev-dependencies]
proptest = "1.0"
