dev-dependencies = { }


[package]
name = "vexy_svgo-test-utils"
description = "Shared testing utilities for vexy_svgo"


[package.version]
workspace = true


[package.edition]
workspace = true


[package.authors]
workspace = true


[package.license]
workspace = true


[package.repository]
workspace = true


[package.homepage]
workspace = true


[dependencies.vexy_svgo-core]
path = "../core"


[dependencies.vexy_svgo-plugin-sdk]
path = "../plugin-sdk"


[dependencies.tempfile]
workspace = true


[dependencies.serde]
workspace = true
features = [ "derive" ]


[dependencies.serde_json]
workspace = true
