dev-dependencies = { }


[package]
name = "vexy-svgo-test-utils"
description = "Shared testing utilities for vexy-svgo"


version = "1.5.1"


[package.edition]
workspace = true


[package.authors]
workspace = true


[package.license]
workspace = true


[package.repository]
workspace = true


[package.homepage]
workspace = true


[dependencies.vexy-svgo-core]
path = "../core"


[dependencies.vexy-svgo-plugin-sdk]
path = "../plugin-sdk"


[dependencies.tempfile]
workspace = true


[dependencies.serde]
workspace = true
features = [ "derive" ]


[dependencies.serde_json]
workspace = true
