dev-dependencies = { }


[package]
name = "vexy-svgo-wasm"
description = "WebAssembly bindings for vexy-svgo SVG optimizer"


[package.version]
workspace = true


[package.edition]
workspace = true


[package.authors]
workspace = true


[package.license]
workspace = true


[package.repository]
workspace = true


[package.homepage]
workspace = true


[lib]
crate-type = [ "cdylib" ]


[dependencies.vexy-svgo-core]
path = "../core"


[dependencies.wasm-bindgen]
workspace = true


[dependencies.js-sys]
workspace = true


[dependencies.serde]
workspace = true
features = [ "derive" ]


[dependencies.serde_json]
workspace = true


[dependencies.wee_alloc]
workspace = true
optional = true


[dependencies.getrandom]
workspace = true
features = ["js"]

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Performance"]


[features]
default = [ "size-optimization" ]
size-optimization = [ "wee_alloc" ]
wasm = [ "size-optimization" ]
wasm-default = [ "size-optimization" ]
wasm-js = [ "size-optimization" ]
wasm-minimal = [ "size-optimization" ]
wasm-full = [ "size-optimization" ]
console_error_panic_hook = []
